include/rthw.h


typedef void (*rt_isr_handler_t)(int vector, void *param);
struct rt_irq_desc
{
    rt_isr_handler_t handler;
    void            *param;
#ifdef RT_USING_INTERRUPT_INFO
    char             name[RT_NAME_MAX];
    rt_uint32_t      counter;
#endif
};
void rt_hw_interrupt_init(void);
void rt_hw_interrupt_mask(int vector);
void rt_hw_interrupt_umask(int vector);
rt_isr_handler_t rt_hw_interrupt_install(int              vector,
                                         rt_isr_handler_t handler,
                                         void            *param,
                                         const char      *name);
void rt_sched_unlock(rt_base_t level);
rt_base_t rt_sched_lock();
#define rt_hw_interrupt_disable rt_sched_lock
#define rt_hw_interrupt_enable rt_sched_unlock
rt_base_t rt_hw_interrupt_disable(void);
void rt_hw_interrupt_enable(rt_base_t level);
rt_bool_t rt_hw_interrupt_is_disabled(void);
void rt_hw_context_switch(rt_ubase_t from, rt_ubase_t to, struct rt_thread *to_thread);
void rt_hw_context_switch_to(rt_ubase_t to, struct rt_thread *to_thread);
void rt_hw_context_switch_interrupt(void *context, rt_ubase_t from, rt_ubase_t to, struct rt_thread *to_thread);
void rt_hw_console_output(const char *str);
void rt_hw_backtrace(rt_uint32_t *fp, rt_ubase_t thread_entry);
void rt_hw_show_memory(rt_uint32_t addr, rt_size_t size);
void rt_hw_exception_install(rt_err_t (*exception_handle)(void *context));
void rt_hw_us_delay(rt_uint32_t us);
int rt_hw_cpu_id(void);