blue/os_compat/rt_thread/bindings.rs

#[test]
fn bindgen_test_layout_rt_irq_desc() {
    const UNINIT: ::core::mem::MaybeUninit<rt_irq_desc> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_irq_desc>(),
        8usize,
        concat!("Size of: ", stringify!(rt_irq_desc))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_irq_desc>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_irq_desc))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).handler) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_irq_desc),
            "::",
            stringify!(handler)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).param) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_irq_desc),
            "::",
            stringify!(param)
        )
    );
}
extern "C" {
    pub fn rt_hw_interrupt_init();
}
extern "C" {
    pub fn rt_hw_interrupt_mask(vector: core::ffi::c_int);
}
extern "C" {
    pub fn rt_hw_interrupt_umask(vector: core::ffi::c_int);
}
extern "C" {
    pub fn rt_hw_interrupt_install(
        vector: core::ffi::c_int,
        handler: rt_isr_handler_t,
        param: *mut core::ffi::c_void,
        name: *const core::ffi::c_char,
    ) -> rt_isr_handler_t;
}
extern "C" {
    pub fn rt_hw_interrupt_disable() -> rt_base_t;
}
extern "C" {
    pub fn rt_hw_interrupt_enable(level: rt_base_t);
}
extern "C" {
    pub fn rt_hw_interrupt_is_disabled() -> rt_bool_t;
}
extern "C" {
    pub fn rt_sched_unlock(level: rt_base_t);
}
extern "C" {
    pub fn rt_sched_lock() -> rt_base_t;
}
extern "C" {
    pub fn rt_hw_context_switch(from: rt_ubase_t, to: rt_ubase_t, to_thread: *mut rt_thread);
}
extern "C" {
    pub fn rt_hw_context_switch_to(to: rt_ubase_t, to_thread: *mut rt_thread);
}
extern "C" {
    pub fn rt_hw_context_switch_interrupt(
        context: *mut core::ffi::c_void,
        from: rt_ubase_t,
        to: rt_ubase_t,
        to_thread: *mut rt_thread,
    );
}
extern "C" {
    pub fn rt_hw_console_output(str_: *const core::ffi::c_char);
}
extern "C" {
    pub fn rt_hw_backtrace(fp: *mut rt_uint32_t, thread_entry: rt_ubase_t);
}
extern "C" {
    pub fn rt_hw_show_memory(addr: rt_uint32_t, size: rt_size_t);
}
extern "C" {
    pub fn rt_hw_exception_install(
        exception_handle: ::core::option::Option<
            unsafe extern "C" fn(context: *mut core::ffi::c_void) -> rt_err_t,
        >,
    );
}
extern "C" {
    pub fn rt_hw_us_delay(us: rt_uint32_t);
}
extern "C" {
    pub fn rt_hw_cpu_id() -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_hw_atomic_load(ptr: *mut rt_atomic_t) -> rt_atomic_t;
}
extern "C" {
    pub fn rt_hw_atomic_store(ptr: *mut rt_atomic_t, val: rt_atomic_t);
}
extern "C" {
    pub fn rt_hw_atomic_add(ptr: *mut rt_atomic_t, val: rt_atomic_t) -> rt_atomic_t;
}
extern "C" {
    pub fn rt_hw_atomic_sub(ptr: *mut rt_atomic_t, val: rt_atomic_t) -> rt_atomic_t;
}
extern "C" {
    pub fn rt_hw_atomic_and(ptr: *mut rt_atomic_t, val: rt_atomic_t) -> rt_atomic_t;
}
extern "C" {
    pub fn rt_hw_atomic_or(ptr: *mut rt_atomic_t, val: rt_atomic_t) -> rt_atomic_t;
}
extern "C" {
    pub fn rt_hw_atomic_xor(ptr: *mut rt_atomic_t, val: rt_atomic_t) -> rt_atomic_t;
}
extern "C" {
    pub fn rt_hw_atomic_exchange(ptr: *mut rt_atomic_t, val: rt_atomic_t) -> rt_atomic_t;
}
extern "C" {
    pub fn rt_hw_atomic_flag_clear(ptr: *mut rt_atomic_t);
}
extern "C" {
    pub fn rt_hw_atomic_flag_test_and_set(ptr: *mut rt_atomic_t) -> rt_atomic_t;
}
extern "C" {
    pub fn rt_hw_atomic_compare_exchange_strong(
        ptr: *mut rt_atomic_t,
        expected: *mut rt_atomic_t,
        desired: rt_atomic_t,
    ) -> rt_atomic_t;
}
pub type syscall_func = ::core::option::Option<unsafe extern "C" fn() -> core::ffi::c_long>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct finsh_syscall {
    pub name: *const core::ffi::c_char,
    pub desc: *const core::ffi::c_char,
    pub opt: *mut msh_cmd_opt,
    pub func: syscall_func,
}
#[test]
fn bindgen_test_layout_finsh_syscall() {
    const UNINIT: ::core::mem::MaybeUninit<finsh_syscall> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<finsh_syscall>(),
        16usize,
        concat!("Size of: ", stringify!(finsh_syscall))
    );
    assert_eq!(
        ::core::mem::align_of::<finsh_syscall>(),
        4usize,
        concat!("Alignment of ", stringify!(finsh_syscall))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).desc) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall),
            "::",
            stringify!(desc)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).opt) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall),
            "::",
            stringify!(opt)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).func) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall),
            "::",
            stringify!(func)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct finsh_syscall_item {
    pub next: *mut finsh_syscall_item,
    pub syscall: finsh_syscall,
}
#[test]
fn bindgen_test_layout_finsh_syscall_item() {
    const UNINIT: ::core::mem::MaybeUninit<finsh_syscall_item> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<finsh_syscall_item>(),
        20usize,
        concat!("Size of: ", stringify!(finsh_syscall_item))
    );
    assert_eq!(
        ::core::mem::align_of::<finsh_syscall_item>(),
        4usize,
        concat!("Alignment of ", stringify!(finsh_syscall_item))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall_item),
            "::",
            stringify!(next)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).syscall) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(finsh_syscall_item),
            "::",
            stringify!(syscall)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct msh_cmd_opt {
    pub id: rt_uint32_t,
    pub name: *const core::ffi::c_char,
    pub des: *const core::ffi::c_char,
}
#[test]
fn bindgen_test_layout_msh_cmd_opt() {
    const UNINIT: ::core::mem::MaybeUninit<msh_cmd_opt> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<msh_cmd_opt>(),
        12usize,
        concat!("Size of: ", stringify!(msh_cmd_opt))
    );
    assert_eq!(
        ::core::mem::align_of::<msh_cmd_opt>(),
        4usize,
        concat!("Alignment of ", stringify!(msh_cmd_opt))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(msh_cmd_opt),
            "::",
            stringify!(id)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(msh_cmd_opt),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).des) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(msh_cmd_opt),
            "::",
            stringify!(des)
        )
    );
}
pub type msh_cmd_opt_t = msh_cmd_opt;
extern "C" {
    pub fn msh_opt_list_dump(options: *mut core::ffi::c_void);
}
extern "C" {
    pub fn msh_cmd_opt_id_get(
        argc: core::ffi::c_int,
        argv: *mut *mut core::ffi::c_char,
        options: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub static mut global_syscall_list: *mut finsh_syscall_item;
}
extern "C" {
    pub static mut _syscall_table_begin: *mut finsh_syscall;
}
extern "C" {
    pub static mut _syscall_table_end: *mut finsh_syscall;
}
extern "C" {
    pub fn finsh_syscall_lookup(name: *const core::ffi::c_char) -> *mut finsh_syscall;
}
extern "C" {
    pub fn finsh_set_device(device_name: *const core::ffi::c_char);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_object_information {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " @addtogroup KernelObject\n @{"]
    pub fn rt_object_get_information(type_: rt_object_class_type) -> *mut rt_object_information;
}
extern "C" {
    pub fn rt_object_get_length(type_: rt_object_class_type) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_object_get_pointers(
        type_: rt_object_class_type,
        pointers: *mut rt_object_t,
        maxlen: rt_size_t,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn rt_object_init(
        object: *mut rt_object,
        type_: rt_object_class_type,
        name: *const core::ffi::c_char,
    );
}
extern "C" {
    pub fn rt_object_detach(object: rt_object_t);
}
extern "C" {
    pub fn rt_object_allocate(
        type_: rt_object_class_type,
        name: *const core::ffi::c_char,
    ) -> rt_object_t;
}
extern "C" {
    pub fn rt_object_delete(object: rt_object_t);
}
extern "C" {
    pub fn rt_custom_object_create(
        name: *const core::ffi::c_char,
        data: *mut core::ffi::c_void,
        data_destroy: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut core::ffi::c_void) -> rt_err_t,
        >,
    ) -> rt_object_t;
}
extern "C" {
    pub fn rt_custom_object_destroy(obj: rt_object_t) -> rt_err_t;
}
extern "C" {
    pub fn rt_object_is_systemobject(object: rt_object_t) -> rt_bool_t;
}
extern "C" {
    pub fn rt_object_get_type(object: rt_object_t) -> rt_uint8_t;
}
extern "C" {
    pub fn rt_object_find(name: *const core::ffi::c_char, type_: rt_uint8_t) -> rt_object_t;
}
extern "C" {
    pub fn rt_object_get_name(
        object: rt_object_t,
        name: *mut core::ffi::c_char,
        name_size: rt_uint8_t,
    ) -> rt_err_t;
}
extern "C" {
    pub fn rt_object_attach_sethook(
        hook: ::core::option::Option<unsafe extern "C" fn(object: *mut rt_object)>,
    );
}
extern "C" {
    pub fn rt_object_detach_sethook(
        hook: ::core::option::Option<unsafe extern "C" fn(object: *mut rt_object)>,
    );
}
extern "C" {
    pub fn rt_object_trytake_sethook(
        hook: ::core::option::Option<unsafe extern "C" fn(object: *mut rt_object)>,
    );
}
extern "C" {
    pub fn rt_object_take_sethook(
        hook: ::core::option::Option<unsafe extern "C" fn(object: *mut rt_object)>,
    );
}
extern "C" {
    pub fn rt_object_put_sethook(
        hook: ::core::option::Option<unsafe extern "C" fn(object: *mut rt_object)>,
    );
}
extern "C" {
    #[doc = " @addtogroup Clock\n @{"]
    pub fn rt_tick_get() -> rt_tick_t;
}
extern "C" {
    pub fn rt_tick_set(tick: rt_tick_t);
}
extern "C" {
    pub fn rt_tick_increase();
}
extern "C" {
    pub fn rt_tick_from_millisecond(ms: rt_int32_t) -> rt_tick_t;
}
extern "C" {
    pub fn rt_tick_get_millisecond() -> rt_tick_t;
}
extern "C" {
    pub fn rt_tick_sethook(hook: ::core::option::Option<unsafe extern "C" fn()>);
}
extern "C" {
    pub fn rt_system_timer_init();
}
